--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -61,12 +61,52 @@ a:hover{
     color: white;
 
 }
+
 .option{
     background-color: #333;
     color: white;
 }
+
 #Impressum{
     text-align: center;
     color: white;
     background-color: #333;
+}
+
+.error{
+    text-align: center;
+    background-color: #333;
+    color: red;
+    font-size: 15px;
+    text-size-adjust: 10px;
+    position: sticky;
+}
+
+.success {
+    text-align: center;
+    background-color: #333;
+    color: green;
+    font-size: 15px;
+    text-size-adjust: 10px;
+    position: sticky;
+}
+
+#welcome {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    color: white;
+    background-color: #333;
+    text-align: center;
+}
+#lougouta{
+    background-color: blue;
+    border-color: blue;
+    color: white;
+}
+#lougouta:hover{
+    background-color: #333;
+    color: white;
 }
