--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    min-height: 100%;
+    position: relative;
     background-color: #333;
     color: white;
 }
@@ -31,7 +33,6 @@ footer {
     text-align: center;
     background-color: blue;
     color: white;
-    bottom: 0;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -73,7 +74,7 @@ a:hover{
 #warnactive{
     background-color: red;
     color: white;
-    top: 10px;
+    top: 79px;
     display: flex;
     justify-content:space-around;
     width: 100%;
